--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -48,7 +48,13 @@
             background: #2F5AA8;
             color: #FFFFFF;
             border-radius: 100px;
-
+            border: none;
+            text-decoration: none;
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 800;
+            font-size: 16px;
+            line-height: 22px;
         }
     }
 
