--- a/src/pages/Courses/Courses.css
+++ b/src/pages/Courses/Courses.css
@@ -52,7 +52,7 @@
   font-weight: 700;
   font-size: 24px;
   line-height: 120%;
-  color: #000000;
+  color: #050505;
 }
 
 .courses-list-wrap {
@@ -63,4 +63,42 @@
 
 .courses-list-content {
   text-align: left;
+}
+
+.courses-list-content-title {
+  width: 171px;
+  height: 19px;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 120%;
+  align-items: center;
+  text-transform: uppercase;
+  color: #2f5aa8;
+}
+.courses-list-content-description {
+  width: 282px;
+  height: 44px;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  align-items: center;
+  color: #000000;
+}
+
+.courses-list-content-btn {
+  width: 282px;
+  padding: 12px 64px;
+  font-family: "Nunito Sans";
+  border-radius: 25px;
+  color: #2f5aa8;
+  border: 1px solid #2f5aa8;
+  background-color: #fff;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
 }
