--- a/src/components/EventsComponents/EventsCard.css
+++ b/src/components/EventsComponents/EventsCard.css
@@ -1,26 +1,6 @@
-.wishlist-rus h2{
-    height: 38px;
-    font-family: 'Nunito Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 38px;
-    line-height: 120%;
-    color: #000000;
-    padding: 0%;
-    margin: 0%;
-}
-.wishlist-rus p{
-    font-family: 'Nunito Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 140%;
-}
-.wishlist-card {
-    border-radius: 8px;
-    cursor: pointer;
-}
-.wishlist-card b{
+
+.text b{
+    display: block;
     text-align: left;
     font-family: 'Nunito Sans';
     font-style: normal;
@@ -29,16 +9,12 @@ line-height: 140%;
     line-height: 140%;
     margin: 0%;
 }
-.wichlist-p{
+.text p{
+    display: block;
     text-align: left;
     font-family: 'Nunito Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 140%;
-}
-.wishlist-product {
-    width: 100%;
-    height: 35vh;
-    object-fit: contain;
 }
