--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -21,7 +21,16 @@ border-radius: 16px;
 .modal-container{
     display: flex;
     justify-content: center;
-    margin-top: 50px    ;
+    /* margin-top: 50px    ; */
+    background-color: rgba(0, 0, 0, 0.2);
+    /* background-attachment:fixed; */
+  width: 100%;
+  height: 550px;
+  z-index: 999;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
 }
 
 .button-auth {
@@ -75,9 +84,10 @@ border-radius: 16px;
     margin-left: 13px
 }
 .auth-container{
-    padding-top: 20px;
-    margin-left: 135px;
+    padding-bottom: 20px;
     margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
 }
 .email-container{
     margin-left: 13px
@@ -86,7 +96,9 @@ border-radius: 16px;
     margin-left: 13px
 }
 .account-container{
-    margin-left: 110px;
+    display: flex;
+    justify-content: center;
+    padding-bottom: 15px;
 }
 .cancel-button{
     margin-left: 310px;
@@ -100,7 +112,13 @@ border-radius: 16px;
     /* background: #fcfcfc; */
     transition: all 0.25s ease;
 }
-
+.email-name{
+    margin-right: 180px;
+    
+}
+.password-name{
+    margin-right: 260px;
+}
 
 
 
