--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,6 +3,7 @@
     height: 90vh;
     background-color: #CFDCF3;
 }
+
 .home-container {
     width: 95%;
     height: 100vh;
@@ -41,7 +42,6 @@
     border-radius: 50%;
     position: absolute;
     top: 100px;
-
 }
 
 .img {
@@ -80,7 +80,7 @@
     align-items: center;
 }
 
-.discription p{
+.discription p {
     width: 60%;
     text-align: left;
     font-family: 'Nunito Sans';
@@ -90,4 +90,42 @@
     line-height: 27px;
     color: #000000;
     margin-left: 12px;
+}
+
+
+.blockTwo {
+    width: 100%;
+    height: 40vh;
+    background-color: #fff;
+    position: absolute;
+    z-index: 2;
+}
+
+.blockTwo-container {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chapter p {
+    left: 37.91%;
+    right: 38.27%;
+    top: 0%;
+    bottom: 72.16%;
+
+    font-family: 'Nunito Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 27px;
+}
+
+.chapter:hover {
+    padding: 40px 20px;
+    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+}
+
+.blockTree {
+    margin-top: 400px !important;
 }
