--- a/src/pages/Qa/Qa.css
+++ b/src/pages/Qa/Qa.css
@@ -18,7 +18,7 @@
   align-items: center;
   padding: 16px 20px;
   width: 484px;
-  height: 56px;
+  height: 30px;
   background: #f7f7fd;
   border-radius: 20px;
   border: none;
@@ -52,6 +52,7 @@ input {
   color: rgba(0, 0, 0, 0.5);
   position: relative;
   left: 175px;
+  margin-bottom: 50px;
 }
 
 .qa-button {
@@ -59,7 +60,7 @@ input {
   width: 280px;
   height: 52px;
   background: rgba(81, 163, 238, 0.7);
-  border-radius: 20px;
+  border-radius: 25px;
   font-family: "Nunito Sans";
   font-style: normal;
   font-weight: 700;
@@ -68,8 +69,12 @@ input {
   color: #ffffff;
   border: none;
   cursor: pointer;
+
 }
 
 .qa-button:hover {
-  box-shadow: 1px 0px 54px -4px rgba(248, 249, 250, 0.2);
+  box-shadow: 1px 6px 72px -4px rgba(246, 248, 250, 0.2);
+  background-color: #f7f7fd;
+  color: #2f5aa8;
+  transition: 0.3s;
 }
