--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,4 +1,5 @@
-.home-main{
+.home-wrapper{
+    .home-main{
     height: 522px;
     background: #CFDCF3;
     display:flex;
@@ -77,5 +78,228 @@
         display: flex;
         align-items: flex-end;
         
+    }
+}
+
+    .home-main-icons{
+        // border: 1px solid #000;
+        padding-left: 40px;
+        padding-right: 40px;
+        padding-top:65px;
+        // height:300px;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+
+        .item{
+            width: 330px;
+        }
+
+        h4{
+            color:#2F5AA8;
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 800;
+            font-size: 20px;
+            line-height: 27px;
+        }
+
+        p{
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 22px;
+            text-align: center;
+
+            color: rgba(0, 0, 0, 0.7);
+        }
+    }
+
+    .home-courses-content img{
+        width: 282px;
+        border-radius: 16px;
+        // border: 0.7px solid #2F5AA8
+    }
+
+    .home-courses-events{
+        margin-top: 70px;
+        // border: 1px solid #000;
+        // border-bottom: 0.7px solid #2F5AA8;
+        padding-bottom: 50px;
+
+        h2{
+            font-family: 'Nunito Sans', sans-serif;
+            font-style: normal;
+            font-weight: 800;
+            font-size: 26px;
+            line-height: 52px;
+            text-align: left;
+            color: #2F5AA8;
+            text-transform:uppercase;
+            text-align: center;
+        }
+        a{
+                text-align: right;
+                text-decoration:none;
+                font-family: 'Nunito Sans';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 18px;
+                line-height: 18px;
+
+                color: #2F5AA8;
+                
+            }
+
+            a:hover{
+                text-decoration:underline;
+            }
+        .home-courses{
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 50px 50px;
+
+            
+        }
+
+        .home-courses-content{
+            .home-courses-content-title{
+                font-family: 'Nunito Sans';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 16px;
+                line-height: 140%;
+                text-align: center;
+                color: rgba(0, 0, 0, 0.8);
+            }
+        }
+    }
+
+    .home-events{
+        display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 50px 50px;
+    }
+
+    .home-courses-content-description{
+        font-family: 'Nunito Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 140%;
+        text-align: center;
+        color: rgba(0, 0, 0, 0.5);
+    }
+
+    .testimonial{
+        margin-top: 100px;
+        // width: 1200px;
+        height: 501px;
+        margin-left: 40px;
+        margin-right: 40px;
+        background: linear-gradient(90deg, rgba(47, 90, 168, 0.91) 49.19%, rgba(217, 217, 217, 0) 100%);
+        border-radius: 17px;
+
+        display:flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        .test-text{
+            display: flex;
+            flex-direction: column;
+            align-items: baseline;
+            padding-left: 100px;
+            p{
+                width: 41px;
+                height: 69px;
+
+                font-family: 'Nunito Sans';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 88px;
+                line-height: 18px;
+
+                display: flex;
+                align-items: center;
+
+                color: #FFFFFF;
+            }
+
+            h4{
+                width: 425px;
+                height: 183px;
+                margin-top: -100px;
+                font-family: 'Nunito Sans';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 22px;
+                text-align: left;
+                color: #FFFFFF;
+            }
+        }
+
+        .feedback{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width:470px;
+            padding-left:100px;
+            text-align:left;
+            
+        }
+        .feedback img{
+            width: 73px;
+            height: 73px;
+            border-radius: 100%;
+            margin-right: 10px;
+        }
+
+        .feedback-author{
+            h6{
+                font-family: 'Nunito Sans';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 18px;
+                color: #FFFFFF; 
+                margin:0;
+                padding: 0;
+            }
+
+            p{
+                font-family: 'Nunito Sans';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 16px;
+                color: #FFFFFF; 
+                margin:0;
+                padding: 0;
+            }
+        }
+    }
+
+    .right{
+        margin-right: 200px;
+        button{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            // padding: 10px;
+            width: 198px;
+            height: 42px;
+            background: #2F5AA8;
+            color: #FFFFFF;
+            border-radius: 100px;
+            border: none;
+            text-decoration: none;
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 800;
+            font-size: 16px;
+            line-height: 22px;
+        
+        }
     }
 }
