--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -124,7 +124,7 @@
 
     .home-courses-events{
         margin-top: 70px;
-        // border: 1px solid #000;
+        border: 15px solid #000;
         // border-bottom: 0.7px solid #2F5AA8;
         padding-bottom: 50px;
 
