--- a/src/pages/Qa/Qa.css
+++ b/src/pages/Qa/Qa.css
@@ -1,6 +1,8 @@
 .qa-form-wrap {
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .qa-form {
   flex-direction: column;
@@ -12,6 +14,7 @@
   height: 417px;
   background: rgba(81, 163, 238, 0.3);
   border-radius: 40px;
+  margin-bottom: 60px;
 }
 
 .qa-input {
@@ -69,7 +72,6 @@ input {
   color: #ffffff;
   border: none;
   cursor: pointer;
-
 }
 
 .qa-button:hover {
@@ -77,4 +79,78 @@ input {
   background-color: #f7f7fd;
   color: #2f5aa8;
   transition: 0.3s;
+}
+
+.questions {
+  justify-content: center;
+  align-items: flex-start;
+  padding: 32px;
+  width: 941px;
+  height: 223px;
+  background: rgba(203, 227, 250, 0.3);
+  border-radius: 40px;
+}
+
+.quetions-text {
+  width: 877px;
+  height: 58px;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 120%;
+  align-items: center;
+  color: #000000;
+  margin-bottom: 72px;
+}
+
+.message-from {
+  display: flex;
+  justify-content: space-between;
+}
+
+.collegues {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.chat-bubble {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  top:-5px;
+}
+
+.micro-answers {
+  width: 187px;
+  height: 19px;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 120%;
+  color: #00000091;
+}
+.micro-answers-data {
+  width: 187px;
+  height: 19px;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 120%;
+  color: #00000091;
+  position: relative;
+  left: 40px;
+  top: -15px;
+}
+
+.chat-bubble-img {
+  position: relative;
+  top: 3px;
+  left: 55px;
 }
