--- a/src/pages/Event/Events.css
+++ b/src/pages/Event/Events.css
@@ -11,22 +11,29 @@
     padding-top: 8vh;
 }
 .wishlist-rus h2{
-    height: 38px;
-    font-family: 'Nunito Sans';
+    font-family: 'Nunito Sans', sans-serif;
     font-style: normal;
-    font-weight: 700;
-    font-size: 38px;
-    line-height: 120%;
-    color: #000000;
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 52px;
+    text-align: left;
+    color: #2F5AA8;
+    text-transform:uppercase;
+    text-align: center;
     padding: 0%;
     margin: 0%;
 }
 .wishlist-rus p{
-    font-family: 'Nunito Sans';
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 140%;
+    /* width: 738px;
+    height: 87px; */
+    font-family: "Nunito Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 120%;
+    align-items: center;
+    text-align: center;
+    color: #000000;
 }
 .wishlist-card {
     border-radius: 8px;
