--- a/src/pages/Articles/Articles.css
+++ b/src/pages/Articles/Articles.css
@@ -32,7 +32,33 @@
   font-family: "Nunito Sans";
   font-style: normal;
   font-weight: 600;
-  font-size: 32px;
-  line-height: 120%;
+  font-size: 20px;
+  line-height: 50%;
   color: #000000;
+  margin-left: 60px;
+}
+
+.articles-list {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+
+.autor-block {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 120px;
+}
+
+.autor {
+  width: 187px;
+  height: 19px;
+  font-family: "Nunito Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 120%;
+  color: #00000091;
 }
