--- a/src/pages/Articles/Articles.css
+++ b/src/pages/Articles/Articles.css
@@ -51,6 +51,10 @@
   justify-content: space-around;
   padding-top: 120px;
 }
+.articles-img {
+  width: 315px;
+  height: 200px;
+}
 
 .autor {
   width: 187px;
