--- a/src/pages/Articles/Articles.css
+++ b/src/pages/Articles/Articles.css
@@ -27,15 +27,21 @@
 }
 
 .articles-list-p {
-  /* width: 751px;
-  height: 76px; */
+  width: 751px;
+  height: 76px;
   font-family: "Nunito Sans";
   font-style: normal;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 50%;
+  font-weight: 400;
+  font-size: 23px;
+  line-height: 120%;
+  display: flex;
+  text-align: start;
+  align-items: flex-start;
   color: #000000;
   margin-left: 60px;
+  position: relative;
+  top: 25px;
+  
 }
 
 .articles-list {
