--- a/src/pages/Articles/Articles.css
+++ b/src/pages/Articles/Articles.css
@@ -1,3 +1,14 @@
+.article-head {
+  padding-top: 100px;
+  background: linear-gradient(56deg, rgb(23, 168, 182), rgb(33, 181, 114));
+}
+.article-header-box {
+  position: relative;
+  top: -100px;
+}
+.article-title {
+  color: #fff;
+}
 .article-text {
   font-family: "Nunito Sans";
   font-style: normal;
@@ -6,14 +17,14 @@
   line-height: 120%;
   align-items: center;
   text-align: center;
-  color: #000000;
+  color: #ffffff;
 }
 
 .article-btn {
   padding: 15px 20px;
   width: 280px;
   height: 52px;
-  background: rgba(81, 163, 238, 0.7);
+  background: #2f5aa8;
   border-radius: 25px;
   font-family: "Nunito Sans";
   font-style: normal;
@@ -24,6 +35,7 @@
   border: none;
   cursor: pointer;
   margin-bottom: 80px;
+  margin-top: 50px;
 }
 
 .articles-list-p {
@@ -41,7 +53,6 @@
   margin-left: 60px;
   position: relative;
   top: 25px;
-  
 }
 
 .articles-list {
@@ -55,7 +66,9 @@
 .autor-block {
   display: flex;
   justify-content: space-around;
-  padding-top: 120px;
+  padding-top: 100px;
+  position: relative;
+  top: -30px;
 }
 .articles-img {
   width: 315px;
@@ -71,4 +84,6 @@
   font-size: 16px;
   line-height: 120%;
   color: #00000091;
+  position: relative;
+  right: 175px;
 }
